# product_flow_agent

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
data/: repository_context.json
data/json/exports/: query_query_search_20260112_190459.json
data/json/repo/: 01_sending_and_receiving_emails.json  02_organizing_your_emails.json
notebooks/: 0. test_gemini_connection.ipynb  1. extract_demo_features.ipynb  ramdoms.md  test_gemini_connection.ipynb
src/config/: __init__.py  llm_clients.py  logging.py
src/mcp_server/: resources.py  server.py  tools.py
src/pipeline/: __init__.py  base.py  run.py  runner.py
src/pipeline/query/: __init__.py  export_node.py  nodes.py  query_planner.py  similar_feature_search.py  similar_flow_search.py  similar_interaction_search.py  similar_screen_search.py  utils.py
src/pipeline/repository/: __init__.py  export_node.py  feature_extractor.py  flow_extractor.py  interaction_extractor.py  screen_extractor.py  split_video_node.py  utils.py
src/retrieval/: __init__.py  feature_spec.py  rank.py  search.py
src/schemas/: mcp.py  product.py
src/storage/: __init__.py  json_store.py  sqlite_store.py  vector_store.py
src/utils/: __init__.py  ffmpeg.py  ids.py  time.py
