[project]
name = "product-flow-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "langchain>=1.2.3",
    "langchain-google-genai>=4.1.3",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "python-dotenv>=1.2.1",
]
